Move search to addon (links)

--- a/distrib/install/addons.ini
+++ b/distrib/install/addons.ini
@@ -159,3 +159,10 @@ gitmodule = "https://bitbucket.org/cantico/icons_oxygen.git"
 tag="version-0-6-3"
 upgrade=1
 install=1
+
+
+[search]
+gitmodule = "https://bitbucket.org/cantico/search.git"
+tag="version-0-1"
+upgrade=1
+install=1
