--- a/install/addons.ini
+++ b/install/addons.ini
@@ -163,6 +163,6 @@ install=1
 
 [search]
 gitmodule = "https://bitbucket.org/cantico/search.git"
-tag="version-0-1"
+tag="0.3"
 upgrade=1
 install=1
