--- a/install/addons.ini
+++ b/install/addons.ini
@@ -13,7 +13,7 @@
 gitmodule = "https://bitbucket.org/cantico/portal_summary.git"
 
 ; the version of addon in cvs or git used to build a version package
-tag="version-0-0-1"
+tag="0.1.3"
 
 ; The addon will be installed when ovidentia is upgraded from the 
 ; administrator interface if the new version of ovidentia 
@@ -31,55 +31,55 @@ install=1
 
 [LibCkEditor]
 gitmodule="https://bitbucket.org/cantico/libckeditor.git"
-tag="version-2-04"
+tag="2.05"
 upgrade=1
 install=1
 
 [widgets]
 gitmodule="https://bitbucket.org/cantico/widgets.git"
-tag="version-1-0-61"
+tag="1.0.67"
 upgrade=1
 install=1
 
 
 [LibOrm]
 gitmodule="https://bitbucket.org/cantico/liborm.git"
-tag="version-0-9-0"
+tag="0.9.2"
 upgrade=1
 install=1
 
 
 [jquery]
 gitmodule="https://bitbucket.org/cantico/jquery.git"
-tag="version-1-11-1-0"
+tag="1.11.1.2"
 upgrade=1
 install=1
 
 
 [mailspooler]
 gitmodule="https://bitbucket.org/cantico/mailspooler.git"
-tag="version-0-12"
+tag="0.13"
 upgrade="7.5.92"
 install=1
 
 
 [LibTimer]
 gitmodule="https://bitbucket.org/cantico/libtimer.git"
-tag="version-0-3"
+tag="0.5"
 upgrade="7.8.0"
 install=1
 
 
 [LibFileManagement]
 gitmodule="https://bitbucket.org/cantico/libfilemanagement.git"
-tag="version-0-2-33"
+tag="0.2.40"
 upgrade="7.8.93"
 install=1
 
 
 [LibTranslate]
 gitmodule="https://bitbucket.org/cantico/libtranslate.git"
-tag="version-1-12-0rc3-02"
+tag="1.12.0.03"
 upgrade="8.0.93"
 install=1
 
@@ -87,55 +87,55 @@ install=1
 [captcha]
 gitmodule="https://bitbucket.org/cantico/captcha.git"
 tag="version-0-7"
-upgrade="7.8.93"
+upgrade="0.8"
 install=1
 
 
 [portlets]
 gitmodule="https://bitbucket.org/cantico/portlets.git"
-tag="version-0-14"
+tag="0.16"
 upgrade=1
 install=1
 
 
 [OVMLPortlets]
 gitmodule="https://bitbucket.org/cantico/ovmlportlets.git"
-tag="version-1-5"
+tag="1.6"
 upgrade=1
 install=1
 
 
 [rssfeed]
 gitmodule="https://bitbucket.org/cantico/rssfeed.git"
-tag="version-5-8-2"
+tag="5.8.3"
 upgrade=1
 install=1
 
 
 [editlinks]
 gitmodule="https://bitbucket.org/cantico/editlinks.git"
-tag="version-0-7"
+tag="0.8"
 upgrade=1
 install=1
 
 
 [approbnotify]
 gitmodule="https://bitbucket.org/cantico/approbnotify.git"
-tag="version-0-2"
+tag="0.3"
 upgrade=1
 install=1
 
 
 [theme_ovidentia_sw]
 gitmodule="https://bitbucket.org/cantico/theme_ovidentia_sw.git"
-tag="version-0-3-4"
+tag="0.3.5"
 upgrade=0
 install=1
 
 
 [absences]
 gitmodule="https://bitbucket.org/cantico/absences.git"
-tag="version-1-2"
+tag="1.2.2"
 upgrade="8.0.93"
 install=1
 
@@ -149,14 +149,14 @@ install=1
 
 [sitemap_editor]
 gitmodule="https://bitbucket.org/cantico/sitemap_editor.git"
-tag="version-0-6-3"
+tag="0.6.4"
 upgrade=1
 install=1
 
 
 [icons_oxygen]
 gitmodule = "https://bitbucket.org/cantico/icons_oxygen.git"
-tag="version-0-6-3"
+tag="0.6.4"
 upgrade=1
 install=1
 
