--- a/composer.json
+++ b/composer.json
@@ -1,31 +1,32 @@
 {
-    "name": "ovidentia/ovidentia",
-    "description": "Portal generator",
-    "homepage": "http://www.ovidentia.org",
-    "license": "GPL-2.0+",
-    "minimum-stability": "dev",
-    "require": {
-        "php": ">=5.1.0",
-        "ovidentia/widgets": ">=1.0.67",
-        "ovidentia/jquery": ">=1.11.1.2",
-        "ovidentia/libtranslate": ">=1.12.0.03",
-        "ovidentia/libfilemanagement": ">=0.2.40",
-        "ovidentia/libtimer": ">=0.5",
-        "ovidentia/liborm": ">=0.9.2",
-        "ovidentia/icons_oxygen": ">=0.6.4",
-        "ovidentia/mailspooler": ">=0.13",
-        "ovidentia/libckeditor": ">=2.05",
-        "ovidentia/portal_summary": ">=0.1.3",
-        "ovidentia/search": ">=0.3",
-        "ovidentia/editlink": ">=0.8",
-        "ovidentia/rssfeed": ">=5.8.3",
-        "ovidentia/captcha": ">=0.8",
-        "ovidentia/absences": ">=2.58",
-        "ovidentia/theme_ovidentia_sw": ">=0.3.5",
-        "ovidentia/approbnotify": ">=0.3",
-        "ovidentia/applications": ">=4.4",
-        "ovidentia/portlets": ">=0.16",
-        "ovidentia/ovmlportlets": ">=1.6",
-        "ovidentia/sitemap_editor": ">=0.6.4"
-    }
+	"name" : "ovidentia/ovidentia",
+	"description" : "Portal generator",
+	"homepage" : "http://www.ovidentia.org",
+	"license" : "GPL-2.0+",
+	"minimum-stability" : "dev",
+	"require" : {
+		"php" : ">=5.3.0",
+		"ovidentia/widgets" : ">=1.0.67",
+		"ovidentia/jquery" : ">=1.11.1.2",
+		"ovidentia/libtranslate" : ">=1.12.0.03",
+		"ovidentia/libfilemanagement" : ">=0.2.40",
+		"ovidentia/libtimer" : ">=0.5",
+		"ovidentia/liborm" : ">=0.9.2",
+		"ovidentia/icons_oxygen" : ">=0.6.4",
+		"ovidentia/mailspooler" : ">=0.13",
+		"ovidentia/libckeditor" : ">=2.05",
+		"ovidentia/portal_summary" : ">=0.1.3",
+		"ovidentia/search" : ">=0.3",
+		"ovidentia/editlink" : ">=0.8",
+		"ovidentia/rssfeed" : ">=5.8.3",
+		"ovidentia/captcha" : ">=0.8",
+		"ovidentia/absences" : ">=2.58",
+		"ovidentia/theme_ovidentia_sw" : ">=0.3.5",
+		"ovidentia/approbnotify" : ">=0.3",
+		"ovidentia/applications" : ">=4.4",
+		"ovidentia/portlets" : ">=0.16",
+		"ovidentia/ovmlportlets" : ">=1.6",
+		"ovidentia/sitemap_editor" : ">=0.6.4",
+		"ovidentia/orgchart": ">=0.11.1"
+	}
 }
