--- a/install/addons.ini
+++ b/install/addons.ini
@@ -166,3 +166,9 @@ gitmodule = "https://bitbucket.org/cantico/search.git"
 tag="0.6"
 upgrade=1
 install=1
+
+[orgchart]
+gitmodule = "https://bitbucket.org/cantico/orgchart.git"
+tag="0.11.1"
+upgrade=1
+install=1
