Add ovidentia_schema addon

--- a/install/addons.ini
+++ b/install/addons.ini
@@ -172,3 +172,9 @@ gitmodule = "https://bitbucket.org/cantico/orgchart.git"
 tag="0.13.1"
 upgrade=1
 install=1
+
+[approbation_schema]
+gitmodule = "https://bitbucket.org/cantico/approbation_schema.git"
+tag="0.2.2"
+upgrade="8.4.91"
+install=1
