Add storeclient to installed addons

--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
 		"ovidentia/ovmlportlets" : ">=1.6",
 		"ovidentia/sitemap_editor" : ">=0.7.9",
 		"ovidentia/orgchart" : ">=0.11.1",
-		"ovidentia/approbation_schema" : ">=0.2.2"
+		"ovidentia/approbation_schema" : ">=0.2.2",
+		"ovidentia/storeclient" : ">=0.4.3"
 	}
 }
