--- a/install/addons.ini
+++ b/install/addons.ini
@@ -122,7 +122,7 @@ install=1
 [approbnotify]
 gitmodule="https://bitbucket.org/cantico/approbnotify.git"
 tag="0.3"
-upgrade=1
+upgrade=0
 install=1
 
 
@@ -169,4 +169,10 @@ install=1
 gitmodule = "https://bitbucket.org/cantico/approbation_schema.git"
 tag="0.2.2"
 upgrade="8.4.91"
+install=1
+
+[storeclient]
+gitmodule = "https://bitbucket.org/cantico/storeclient.git"
+tag="0.4.3"
+upgrade=0
 install=1
