--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
 	"homepage" : "http://www.ovidentia.org",
 	"license" : "GPL-2.0+",
 	"minimum-stability" : "dev",
+	"prefer-stable": true,
 	"require" : {
 		"php" : ">=5.3.0",
 		"ovidentia/widgets" : ">=1.0.96",
