--- a/install/addons.ini
+++ b/install/addons.ini
@@ -176,3 +176,9 @@ gitmodule = "https://bitbucket.org/cantico/storeclient.git"
 tag="0.4.10"
 upgrade=0
 install=1
+
+[authldap]
+gitmodule = "https://bitbucket.org/cantico/authldap.git"
+tag="1.0"
+upgrade=1
+install=1
