Add docx2txt parameter to swish-e

--- a/ovidentia/skins/ovidentia/templates/swish.config
+++ b/ovidentia/skins/ovidentia/templates/swish.config
@@ -36,6 +36,11 @@ FileFilter .doc { catdoc } '-s 8859-1 -d 8859-1 "%p"'
 IndexContents TXT* .doc
 <!--#endif catdoc -->
 
+<!--#if docx2txt -->
+FileFilter .docx { docx2txt } '"%p" -'
+IndexContents TXT* .docx
+<!--#endif docx2txt -->
+
 <!--#if unzip -->
 FileFilterMatch { unzip } '-p "%p" content.xml' /\.(sxw|sxc|sxi|odt|odp|ods)$/i
 IndexContents XML* .sxw .sxc .sxi .odt .odp .ods
